modifying vue components' structure and shared template

--- a/public/css/all.css
+++ b/public/css/all.css
@@ -78,3 +78,10 @@ textarea{
     background-color: white;
 }
 
+#logout{
+    float: right;
+    position: fixed;
+    top: 10px;
+    right: 10px;
+}
+
