--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -75,3 +75,12 @@ textarea{
     right: 10px;
     z-index: 100;
 }
+
+#cecosNav{
+    background-color:#fcc41c !important;
+    margin-bottom: 20px;
+}
+
+#cecosLogo{
+    height: 4vh;
+}
