--- a/public/css/all.css
+++ b/public/css/all.css
@@ -1,5 +1,8 @@
 *{
-    font-family:Arial, Helvetica, sans-serif;
+    /* font-family:Arial, Helvetica, sans-serif; */
+    /* font-family: 'Lato', sans-serif; */
+    font-family: 'Rubik', sans-serif;
+    /* font-family: 'Roboto', sans-serif; */
 }
 
 .container{
@@ -92,6 +95,8 @@ textarea{
 }
 
 #cecosLogo{
-    height: 4vh;
+    height: 9vh;
 }
+
+
 
