--- a/public/css/all.css
+++ b/public/css/all.css
@@ -1,8 +1,5 @@
 *{
-    /* font-family:Arial, Helvetica, sans-serif; */
-    /* font-family: 'Lato', sans-serif; */
-    font-family: 'Rubik', sans-serif;
-    /* font-family: 'Roboto', sans-serif; */
+    font-family:Arial, Helvetica, sans-serif;
 }
 
 .container{
@@ -89,14 +86,17 @@ textarea{
     z-index: 100;
 }
 
+.modifColorLogout {
+    background-color: #E2211D;
+    color: white;
+}
+
 #cecosNav{
     background-color:#fcc41c !important;
     margin-bottom: 20px;
 }
 
 #cecosLogo{
-    height: 9vh;
+    height: 4vh;
 }
-
-
 
