--- a/public/css/all.css
+++ b/public/css/all.css
@@ -1,8 +1,6 @@
-*{
-    /* font-family:Arial, Helvetica, sans-serif; */
-    font-family: 'Rubik', sans-serif;
-}
-
+/* *{
+    font-family:Arial, Helvetica, sans-serif;
+} */
 
 .container{
     height: 100%;
@@ -14,9 +12,6 @@
 
 #logo{
     max-width: 40%;
-    display: block;
-    /* margin-left: auto;
-    margin-right: auto; */
 }
 
 #login{
@@ -86,7 +81,7 @@ textarea{
 #logout{
     float: right;
     position: fixed;
-    top: 10px;
+    top: 15px;
     right: 10px;
     z-index: 100;
 }
@@ -97,12 +92,23 @@ textarea{
     font-size: 15px;
 }
 
-#cecosNav{
+#cecosNav, #adminNav{
     background-color:#fcc41c !important;
     margin-bottom: 20px;
+    cursor: pointer;
+    border: 1px solid black;
 }
 
-#cecosLogo{
+#navbarNav a{
+    color: #0A0A0A;
+    font-size: 15px;
+}
+
+#cecosLogo, #adminLogo{
     height: 4vh;
+    cursor: default;
+    background-color: white;
+    width: 100px;
+    height: 39.63px;
 }
 
