--- a/public/css/all.css
+++ b/public/css/all.css
@@ -1,8 +1,6 @@
 *{
-    /* font-family:Arial, Helvetica, sans-serif; */
-    font-family: 'Rubik', sans-serif;
+    font-family:Arial, Helvetica, sans-serif;
 }
-
 
 .container{
     height: 100%;
@@ -13,10 +11,7 @@
 }
 
 #logo{
-    max-width: 40%;
-    display: block;
-    /* margin-left: auto;
-    margin-right: auto; */
+    max-width: 80%;
 }
 
 #login{
@@ -94,7 +89,6 @@ textarea{
 .modifColorLogout {
     background-color: #E2211D;
     color: white;
-    font-size: 15px;
 }
 
 #cecosNav{
