--- a/public/css/all.css
+++ b/public/css/all.css
@@ -1,6 +1,6 @@
-/* *{
-    font-family:Arial, Helvetica, sans-serif;
-} */
+*{
+    font-family:'Rubik', sans-serif;
+}
 
 .container{
     height: 100%;
