--- a/public/css/all.css
+++ b/public/css/all.css
@@ -35,10 +35,16 @@
     color: #fbbd00;
 }
 
+@font-face {
+    font-family: myFamily;
+    src: url(../media/fonts/Signika-Medium.ttf);
+}
+
 #login-card-header{
     background-color: #15acc4;
     font-weight: bold;
     font-size: 1.2em;
+    font-family: myFamily;
 }
 
 #login-card{
