--- a/public/css/all.css
+++ b/public/css/all.css
@@ -1,6 +1,6 @@
-*{
-    font-family:'Rubik', sans-serif;
-}
+/* *{
+    font-family:Arial, Helvetica, sans-serif;
+} */
 
 .container{
     height: 100%;
@@ -19,7 +19,6 @@
     border: 1.5px solid black;
     font-weight: bold;
     font-size: 1em;
-    color: black;
 }
 
 #loginContainer{
@@ -35,16 +34,10 @@
     color: #fbbd00;
 }
 
-@font-face {
-    font-family: myFamily;
-    src: url(../media/fonts/Signika-Medium.ttf);
-}
-
 #login-card-header{
     background-color: #15acc4;
     font-weight: bold;
     font-size: 1.2em;
-    font-family: myFamily;
 }
 
 #login-card{
