cambios letra y color

--- a/public/css/all.css
+++ b/public/css/all.css
@@ -19,6 +19,7 @@
     border: 1.5px solid black;
     font-weight: bold;
     font-size: 1em;
+    color: black;
 }
 
 #loginContainer{
@@ -34,10 +35,16 @@
     color: #fbbd00;
 }
 
+@font-face {
+    font-family: myFamily;
+    src: url(../media/fonts/Signika-Medium.ttf);
+}
+
 #login-card-header{
     background-color: #15acc4;
     font-weight: bold;
     font-size: 1.2em;
+    font-family: myFamily;
 }
 
 #login-card{
