--- a/public/css/all.css
+++ b/public/css/all.css
@@ -19,6 +19,7 @@
     border: 1.5px solid black;
     font-weight: bold;
     font-size: 1em;
+    color: black;
 }
 
 #loginContainer{
@@ -34,10 +35,16 @@
     color: #fbbd00;
 }
 
+@font-face {
+    font-family: titlesFont;
+    src: url(../media/fonts/Signika-Medium.ttf);
+}
+
 #login-card-header{
     background-color: #15acc4;
     font-weight: bold;
-    font-size: 1.2em;
+    font-size: 18px;
+    font-family: titlesFont;
 }
 
 #login-card{
@@ -84,7 +91,6 @@ textarea{
     top: 15px;
     right: 10px;
     z-index: 100;
-    font-family: 'Rubik', sans-serif;
 }
 
 .modifColorLogout {
@@ -93,7 +99,7 @@ textarea{
     font-size: 15px;
 }
 
-#cecosNav, #adminNav{
+#cecosNav{
     background-color:#fcc41c !important;
     margin-bottom: 20px;
     cursor: pointer;
@@ -105,7 +111,7 @@ textarea{
     font-size: 15px;
 }
 
-#cecosLogo, #adminLogo{
+#cecosLogo{
     height: 4vh;
     cursor: default;
     background-color: white;
