--- a/public/css/all.css
+++ b/public/css/all.css
@@ -19,7 +19,6 @@
     border: 1.5px solid black;
     font-weight: bold;
     font-size: 1em;
-    color: black;
 }
 
 #loginContainer{
@@ -35,16 +34,10 @@
     color: #fbbd00;
 }
 
-@font-face {
-    font-family: titlesFont;
-    src: url(../media/fonts/Signika-Medium.ttf);
-}
-
 #login-card-header{
     background-color: #15acc4;
     font-weight: bold;
-    font-size: 18px;
-    font-family: titlesFont;
+    font-size: 1.2em;
 }
 
 #login-card{
@@ -91,7 +84,6 @@ textarea{
     top: 15px;
     right: 10px;
     z-index: 100;
-    font-family: 'Rubik', sans-serif;
 }
 
 .modifColorLogout {
@@ -100,7 +92,7 @@ textarea{
     font-size: 15px;
 }
 
-#cecosNav{
+#cecosNav, #adminNav{
     background-color:#fcc41c !important;
     margin-bottom: 20px;
     cursor: pointer;
@@ -112,7 +104,7 @@ textarea{
     font-size: 15px;
 }
 
-#cecosLogo{
+#cecosLogo, #adminLogo{
     height: 4vh;
     cursor: default;
     background-color: white;
