--- a/public/css/all.css
+++ b/public/css/all.css
@@ -14,11 +14,6 @@
     max-width: 40%;
 }
 
-@font-face {
-    font-family: myFont;
-    src: url(../media/fonts/Signika-Medium.ttf);
-}
-
 #login{
     background-color: #e3177d;
     border: 1.5px solid black;
@@ -40,11 +35,16 @@
     color: #fbbd00;
 }
 
+@font-face {
+    font-family: myFuckingFont;
+    src: url(/SGTA-Broggi/public/fonts/Signika-Regular.ttf);
+}
+
 #login-card-header{
     background-color: #15acc4;
     font-weight: bold;
     font-size: 1.2em;
-    font-family: myFont;
+    font-family: myFuckingFont;
 }
 
 #login-card{
@@ -87,19 +87,16 @@ textarea{
 
 #logout{
     float: right;
-    position: absolute;
+    position: fixed;
     top: 15px;
-    right: 15px;
+    right: 10px;
     z-index: 100;
-    font-family: 'Rubik', sans-serif;
 }
 
 .modifColorLogout {
     background-color: #E2211D;
     color: white;
     font-size: 15px;
-    font-family: 'Rubik', sans-serif;
-
 }
 
 #cecosNav{
