--- a/public/css/app.css
+++ b/public/css/app.css
@@ -2629,6 +2629,7 @@ textarea.form-control.is-invalid {
 .btn {
   display: inline-block;
   font-weight: 400;
+  color: #212529;
   text-align: center;
   vertical-align: middle;
   -webkit-user-select: none;
@@ -2663,7 +2664,7 @@ textarea.form-control.is-invalid {
 
 .btn.disabled,
 .btn:disabled {
-  opacity: 0.85;
+  opacity: 0.65;
 }
 
 .btn:not(:disabled):not(.disabled) {
