--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -77,7 +77,7 @@ textarea{
 
 #logout{
     float: right;
-    position: fixed;
+    position: absolute;
     top: 15px;
     right: 10px;
     z-index: 100;
