--- a/public/css/all.css
+++ b/public/css/all.css
@@ -36,7 +36,7 @@
 }
 
 @font-face {
-    font-family: myFuckingFont;
+    font-family: myFont;
     src: url(/SGTA-Broggi/public/fonts/Signika-Regular.ttf);
 }
 
@@ -44,7 +44,7 @@
     background-color: #15acc4;
     font-weight: bold;
     font-size: 1.2em;
-    font-family: myFuckingFont;
+    font-family: myFont;
 }
 
 #login-card{
@@ -119,4 +119,29 @@ textarea{
     width: 100px;
     height: 39.63px;
 }
+
+.esborrarBtn {
+    background-color: #e3177d !important;
+    color: black !important;
+}
+
+.editarBtn {
+  background-color: #15acc4 !important;
+  color: black !important;
+}
+
+.editarBtn:hover {
+  color: black !important;
+}
+
+
+.cerrarBtn {
+  background-color: #6c757d !important;
+  color: white;
+}
+
+.cerrarBtn:hover {
+  color: white;
+}
+
 
