--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -95,6 +95,8 @@ textarea{
     margin-bottom: 20px;
     cursor: pointer;
     border: 1px solid black;
+    /* background: rgb(255,255,255);
+    background: linear-gradient(90deg, rgba(255,255,255,1) 8.5%, rgba(252,196,28,1) 8.5%, rgba(252,196,28,1) 100%); */
 }
 
 #navbarNav a{
@@ -105,9 +107,13 @@ textarea{
 #cecosLogo{
     height: 4vh;
     cursor: default;
-    background-color: white;
-    width: 100px;
-    height: 39.63px;
+    /* background-color: white;
+    border-radius: 3px;
+    border: 1px black solid; */
+    /* width: 100px;
+    height: 39.63px; */
+    width: 125px;
+    height: 49.54px;
 }
 
 .esborrarBtn {
@@ -134,3 +140,8 @@ textarea{
   color: white;
 }
 
+.btn-float-afegir {
+    position: fixed;
+    bottom: 30px;
+    right: 30px;
+}
