--- a/public/css/all.css
+++ b/public/css/all.css
@@ -17,9 +17,8 @@
 #login{
     background-color: #e3177d;
     border: 1.5px solid black;
-    font-weight: bold;
-    font-size: 1em;
-    color: black;
+    font-size: 15px;
+    color: white;
 }
 
 #loginContainer{
