--- a/public/css/all.css
+++ b/public/css/all.css
@@ -149,9 +149,11 @@ textarea{
   color: white;
 }
 
-.btn-float-afegir {
-    position: fixed;
-    bottom: 30px;
-    right: 30px;
+
+.paginacionNav{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+
 }
 
