--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -139,8 +139,10 @@ textarea{
   color: white;
 }
 
-.btn-float-afegir {
-    position: fixed;
-    bottom: 30px;
-    right: 30px;
+
+.paginacionNav{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+
 }
