--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,6 +1,11 @@
 /* *{
     font-family:Arial, Helvetica, sans-serif;
 } */
+html{
+    /* overflow-y: scroll; */
+    /* overflow-y: hidden; */
+    overflow-y: overlay;
+}
 
 .container{
     height: 100%;
@@ -78,7 +83,7 @@ textarea{
     float: right;
     position: absolute;
     top: 20px;
-    right: 10px;
+    right: 1.5vw;
     z-index: 100;
     font-family: 'Rubik', sans-serif;
 }
